@@ -1,5 +1,9 @@
 2007-05-31  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/test-preview-area.c: minor improvements.
+
+2007-05-31  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/Makefile.am: build test-preview-area to avoid bit
 	rot.
 
